--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,7 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb",
         "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
     ],
     "parserOptions": {
@@ -18,13 +16,14 @@
         "react",
         "react-hooks",
         "@typescript-eslint",
-        "prettier"
+        "prettier",
+        "import"
     ],
     "rules": {
         "prettier/prettier": "error",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-filename-extension": [1, {"extensions": [".tsx"]}],
+        "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
         "import/extensions": [
             "error",
@@ -36,7 +35,7 @@
         ]
     },
     "settings": {
-        "import/resolver" : {
+        "import/resolver": {
             "typescript": {}
         }
     }
